--- a/style.css
+++ b/style.css
@@ -57,3 +57,8 @@ body {
   height: auto;
   object-fit: contain;
 }
+#simulationSection {
+  max-width: 1400px;
+  margin: 50px auto; /* 與幻燈片間距 */
+  padding: 20px;
+}
